[tool.poetry]
name = "webcomic-publisher"
version = "0.1.4"
description = "A CLI for publishing webcomics on the internet"
authors = ["samdouble <samdouble@proton.me>"]
readme = "README.md"

[tool.poetry.scripts]
webcomic_publisher = "webcomic_publisher.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
numpy = "^2.1.0"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
major_on_zero = false
branch = "master"
# upload_to_PyPI = true
# upload_to_release = true
# build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
